--- a/indexv2.html
+++ b/indexv2.html
@@ -84,6 +84,10 @@
 			font-size: 12px;
             letter-spacing: 2px;
 		}
+		.featuredappscontainer{
+		    max-width: 1280px;
+			margin: 0px auto;
+		}
 		.featuredappsone span.featuredappsoneimg{
 		    background: url(zohohome-sprite-new.png) no-repeat -448px -10px;
 			width: 84px;
@@ -153,7 +157,7 @@
 		.featuredappslist{
 		    display: table;
 			margin: 0px auto;
-			max-width: 1280px;
+			width: 100%;
 		}
 		.featuredappsonehead, .featuredappsonedesc, .featuredappstwohead, .featuredappsthreehead, .featuredappsfourhead, .featuredappsfivehead{
 		    display: block;
@@ -291,6 +295,7 @@
 	</div>
 	<div class="featuredapps">
 	    <h3>FEATURED APPS</h3>
+		<div class="featuredappscontainer">
 		<div class="featuredappslist">
 	        <a href="#" class="featuredappsone">
 		        <span class="featuredappsoneimg"></span>
@@ -318,6 +323,7 @@
 		    	<small>Context-aware help desk.</small>
 		    </a>
 			
+		</div>
 		</div>
 	</div>
 </body>
